fix: 修改 useEffect 里面有函数死循环的问题

--- a/src/Components/Player/index.scss
+++ b/src/Components/Player/index.scss
@@ -8,6 +8,10 @@
   color: white;
   background-color: rgb(33, 32, 32);
 
+  .player-layout {
+    height: 500px;
+  }
+
   .player-box {
     display: flex;
     align-items: center;
