--- a/src/Components/Lrc/index.scss
+++ b/src/Components/Lrc/index.scss
@@ -1,5 +1,16 @@
 .music-lrc {
-  width: 300px;
-  height: 500px;
+  width: 360px;
+  height: 370px;
+  padding-left: 30px;
   overflow: auto;
+
+  .lrc-list {
+    font-size: 16px;
+    line-height: 25px;
+    letter-spacing: 1px;
+  }
+
+  .choose-lrc {
+    color: #52c41a;
+  }
 }
