--- a/src/Components/Lrc/index.scss
+++ b/src/Components/Lrc/index.scss
@@ -1,8 +1,10 @@
 .music-lrc {
+  padding: 41px 0 200px 0;
   width: 360px;
   height: 370px;
   padding-left: 30px;
   overflow: auto;
+  scroll-behavior: smooth;
 
   .lrc-list {
     font-size: 16px;
