--- a/src/Components/Player/index.scss
+++ b/src/Components/Player/index.scss
@@ -6,7 +6,30 @@
   height: 100%;
   z-index: 2021;
   color: white;
-  background-color: rgb(33, 32, 32);
+
+  .player-fade {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgb(33, 32, 32);
+    opacity: .9;
+    z-index: -1;
+  }
+
+  .player-bg {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-position: 50%;
+    background-repeat: no-repeat;
+    background-size: cover;
+    filter: blur(5px);
+    z-index: -2;
+  }
 
   .player-layout {
     height: 600px;
@@ -36,7 +59,7 @@
     }
   }
 
-  .play-control {
+  .music-log {
     text-align: center;
   }
 }
