--- a/src/index.scss
+++ b/src/index.scss
@@ -11,3 +11,29 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+// 滚动条整体宽度
+::-webkit-scrollbar {
+  width: 8px;
+}
+// 滚动条滑槽样式
+::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+  border-radius: 8px;
+}
+// 滚动条样式
+::-webkit-scrollbar-thumb {
+  border-radius: 8px;
+  background: #ddd;
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5);
+}
+::-webkit-scrollbar-thumb:hover{
+  background: #ccc;
+}
+::-webkit-scrollbar-thumb:active{
+  background: #999;
+}
+// 浏览器失焦的样式
+// ::-webkit-scrollbar-thumb:window-inactive {
+//   background: rgba(0,0,0,0.4);
+// }
