--- a/src/Components/Lrc/index-word.scss
+++ b/src/Components/Lrc/index-word.scss
@@ -1,23 +1,41 @@
 .music-lrc-word {
-  padding: 41px 0 200px 0;
-  width: 360px;
-  height: 370px;
-  padding-left: 30px;
-  overflow: auto;
+  display: flex;
+  flex-direction: column;
+  padding-left: 96px;
+  overflow-y: auto;
+  transition: .5s;
+  height: 100%;
   scroll-behavior: smooth;
+  
+  &::-webkit-scrollbar {
+    display: none;
+  }
 
   .lrc-list {
-    font-size: 16px;
-    letter-spacing: 1px;
+    letter-spacing: 2px;
 
     p {
       display: inline-block;
-      line-height: 25px;
-      height: 25px;
+      font-size: 3.5vh;
+      height: 5vh;
+      margin-top: 2.5vh;
+      margin-bottom: 0;
+      transition: all 0.2s ease-in-out;
+      opacity: .48;
+      font-weight: 400;
+    }
+
+    &:first-child {
+      margin-top: calc(5 + 2.5)vh;
+    }
+
+    &:last-child {
+      margin-bottom: 30vh;
     }
   }
 
-  .choose-lrc-line {
+  p.choose-lrc-line {
+    opacity: 1;
     transition: all 0.2s ease-in-out;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
