--- a/src/Components/Player/index.scss
+++ b/src/Components/Player/index.scss
@@ -7,6 +7,10 @@
   z-index: 2021;
   color: white;
 
+  p {
+    margin-bottom: 0;
+  }
+  
   .player-fade {
     position: absolute;
     top: 0;
@@ -14,7 +18,7 @@
     width: 100%;
     height: 100%;
     background-color: rgb(33, 32, 32);
-    opacity: .9;
+    opacity: .8;
     z-index: -1;
   }
 
@@ -27,35 +31,68 @@
     background-position: 50%;
     background-repeat: no-repeat;
     background-size: cover;
-    filter: blur(5px);
+    filter: blur(50px);
     z-index: -2;
   }
 
-  .player-layout {
-    height: 600px;
-  }
-
   .player-box {
+    position: absolute;
+    top: 0;
+    left: 0;
     display: flex;
-    align-items: center;
-    justify-content: space-around;
-    max-width: 1200px;
-    margin: auto;
-    padding-top: 80px;
+    width: 100%;
+    height: 100%;
   }
 
-  .player-img {
+  .player-left, .player-right {
+    flex: 1;
+    font-weight: 600;
+    margin-right: 24px;
+    height: 100%;
+    align-content: flex-start;
+  }
+
+  .player-right {
+  }
+
+  .player-left {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin-top: 5vh;
+
+    .player-img {
+      text-align: center;
+      width: 100%;
+    }
     img {
-      width: 300px;
+      width: 25vw;
+      max-width: 60vh;
+      border-radius: 20px;
+      align-self: baseline;
     }
   }
 
   .player-info {
-    margin-bottom: 40px;
-    padding-left: 30px;
+    width: 25vw;
+    margin: 3vh 0;
 
     .music-name {
-      font-size: 20px;
+      font-size: 22px;
+      letter-spacing: 2px;
+      margin-bottom: 10px;
+    }
+
+    .music-artist {
+      font-size: 14px;
+      opacity: .5;
+    }
+
+    .music-current-lrc {
+      font-size: 14px;
+      height: 30px;
+      line-height: 30px;
+      opacity: .5;
     }
   }
 
