--- a/src/Components/Lrc/index.scss
+++ b/src/Components/Lrc/index.scss
@@ -1,4 +1,5 @@
 .music-lrc {
+  position: relative;
   display: flex;
   flex-direction: column;
   padding-left: 96px;
@@ -22,7 +23,7 @@
       margin-bottom: 0;
       transition: all 0.2s ease-in-out;
       opacity: .4;
-      font-weight: 400;
+      font-weight: 500;
     }
 
     &:first-child {
