--- a/src/Components/Player/index.scss
+++ b/src/Components/Player/index.scss
@@ -18,7 +18,7 @@
     width: 100%;
     height: 100%;
     background-color: rgb(33, 32, 32);
-    opacity: .8;
+    opacity: .7;
     z-index: -1;
   }
 
@@ -31,7 +31,7 @@
     background-position: 50%;
     background-repeat: no-repeat;
     background-size: cover;
-    filter: blur(50px);
+    filter: blur(40px);
     z-index: -2;
   }
 
@@ -53,6 +53,7 @@
   }
 
   .player-right {
+    mask: linear-gradient(180deg, transparent, white 40%, transparent 100%, white);
   }
 
   .player-left {
