feat: 添加歌曲进度条,抽离播放信息到 reducer

--- a/src/Components/Player/index.scss
+++ b/src/Components/Player/index.scss
@@ -61,6 +61,7 @@
     flex-wrap: wrap;
     justify-content: center;
     margin-top: 10vh;
+    user-select: none;
 
     .player-line {
       width: 100%;
