fix: 调整页面结果

--- a/src/Components/Lrc/index-word.scss
+++ b/src/Components/Lrc/index-word.scss
@@ -36,6 +36,7 @@
 
   p.choose-lrc-line {
     opacity: 1;
+    font-size: 3.5vh;
     font-weight: 600;
     transition: all 0.2s ease-in-out;
     -webkit-background-clip: text;
