--- a/src/Components/Lrc/index.scss
+++ b/src/Components/Lrc/index.scss
@@ -38,6 +38,7 @@
   p.choose-lrc {
     opacity: 1;
     font-weight: 600;
+    font-size: 3.5vh;
     // text-shadow: 0 0 1px white, 0 0 1px #00FFFF, 0 0 5px #7FFF00, 0 0 2px white;
   }
 }
