--- a/src/Components/Upload/index.scss
+++ b/src/Components/Upload/index.scss
@@ -4,10 +4,11 @@
   }
 
   .tips {
+    font-size: 12px;
+    padding-top: 10px;
     span {
       display: inline-block;
       width: 100%;
-      padding-top: 15px;
     }
   }
 }
