feat: 添加歌曲列表,播放器获取歌曲信息, 即将要做关联歌词

--- a/src/App.scss
+++ b/src/App.scss
@@ -58,3 +58,14 @@ a {
 del {
     text-decoration: line-through;
 }
+
+
+.action {
+  color: #1890ff;
+  cursor: pointer;
+  transition: all .2 ease;
+
+  &:hover {
+      opacity: .8;
+  }
+}
