--- a/src/Components/Control/index.scss
+++ b/src/Components/Control/index.scss
@@ -1,39 +1,70 @@
 .player-control {
-  width: 30vw;
-  max-width: 50vh;
-  height: 120px;
-
   p {
     margin: 0
   }
 
-  .control-line {
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-
-    > section {
+  .control {
+    width: 30vw;
+    max-width: 50vh;
+    height: 120px;
+    .control-line {
       display: flex;
-      align-items: center;
-      height: 100%;
+      justify-content: space-between;
+      flex-wrap: wrap;
+  
+      > section {
+        display: flex;
+        align-items: center;
+        height: 100%;
+      }
+    }
+  
+    .line-left {
+      width: 100%;
+      display: flex;
+      justify-content: space-between;
+      opacity: .5;
+      line-height: 30px;
+    }
+  
+    .line-center {
+      width: 100%;
+      justify-content: center;
+  
+      .icon {
+        color: black;
+      }
+  
+      .icon-play-bg {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 40px;
+        height: 40px;
+        background-color: white;
+        padding: 10px;
+        border-radius: 100%;
+      }
+  
+      .icon-play, .icon-pause {
+        font-size: 40px;
+        cursor: pointer;
+        transition: all .2s ease-in-out;
+      }
+    }
+  
+    .line-right {
+      width: 120px;
+      width: 200px;
+      justify-content: flex-end;
     }
   }
 
-  .line-left {
-    width: 100%;
+  .control-min {
     display: flex;
-    justify-content: space-between;
-    opacity: .5;
-    line-height: 30px;
-  }
-
-  .line-center {
-    width: 100%;
-    justify-content: center;
-
-    .icon {
-      color: black;
-    }
+    align-items: center;
+    user-select: none;
+    margin-left: 30px;
 
     .icon-play-bg {
       display: flex;
@@ -51,11 +82,14 @@
       cursor: pointer;
       transition: all .2s ease-in-out;
     }
-  }
 
-  .line-right {
-    width: 120px;
-    width: 200px;
-    justify-content: flex-end;
+    .control-progress {
+      margin-left: 20px;
+      width: 50vw;
+    }
+
+    .line-left {
+      margin-left: 20px;
+    }
   }
 }
