--- a/src/Components/Player/index.scss
+++ b/src/Components/Player/index.scss
@@ -1,10 +1,10 @@
-.player {
+.player-max {
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  z-index: 2021;
+  z-index: 100;
   color: white;
   background-color: rgb(33, 32, 32);
 
@@ -105,5 +105,65 @@
 
   .music-log {
     text-align: center;
+  }
+
+  .status-control {
+    position: fixed;
+    top: 20px;
+    left: 20px;
+    font-size: 2vw;
+    z-index: 101;
+    cursor: pointer;
+    opacity: .5;
+    transition: opacity .4s ease-in-out;
+
+
+    &:hover {
+      opacity: 1;
+    }
+  }
+}
+
+
+.player-min {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 70px;
+  z-index: 100;
+  color: #820014;
+  background-color: #fff1f0;
+
+  .player-layout {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    height: 100%;
+    padding: 0 50px;
+
+    .layout-left {
+      display: flex;
+    }
+
+    .music-img img {
+      cursor: pointer;
+      height: 60px;
+      transition: transform .4s ease-in-out;
+      
+      &:hover {
+        transform: scale(1.1);
+      }
+    }
+
+    .player-info {
+      margin-left: 20px;
+      line-height: 25px;
+      font-size: 14px;
+
+      p {
+        margin-bottom: 0;
+      }
+    }
   }
 }
