--- a/src/Components/Player/index.scss
+++ b/src/Components/Player/index.scss
@@ -133,7 +133,7 @@
   height: 70px;
   z-index: 100;
   color: #820014;
-  background-color: #fff1f0;
+  background-color:rgb(33, 32, 32, .9);
 
   .player-layout {
     display: flex;
