--- a/src/Components/Player/index.scss
+++ b/src/Components/Player/index.scss
@@ -2,11 +2,12 @@
   position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   z-index: 100;
   color: white;
   background-color: rgb(33, 32, 32);
+  overflow: hidden;
 
   p {
     margin-bottom: 0;
