--- a/src/Components/Upload/index.scss
+++ b/src/Components/Upload/index.scss
@@ -6,9 +6,11 @@
   .tips {
     font-size: 12px;
     padding-top: 10px;
+    margin-bottom: 20px;
     span {
       display: inline-block;
       width: 100%;
+      line-height: 25px;
     }
   }
 }
