feat: 歌曲列表和歌词添加全局联动

--- a/src/Home/index.scss
+++ b/src/Home/index.scss
@@ -35,11 +35,11 @@
         color: #000;
 
         &.active {
-          color: #52c41a;
+          color: #1890ff;
         }
 
         &:hover {
-          color: #52c41a;
+          color: #1890ff;
         }
       }
     }
