--- a/src/Components/Control/index.scss
+++ b/src/Components/Control/index.scss
@@ -1,4 +1,5 @@
 .player-control {
+  width: 100%;
   p {
     margin: 0
   }
@@ -32,7 +33,7 @@
       justify-content: center;
   
       .icon {
-        color: black;
+        color: var(--text-color);
       }
   
       .icon-play-bg {
@@ -65,6 +66,7 @@
     align-items: center;
     user-select: none;
     margin-left: 30px;
+    width: 100%;
 
     .icon-play-bg {
       display: flex;
@@ -78,6 +80,7 @@
     }
 
     .icon-play, .icon-pause {
+      color: var(--text-color);
       font-size: 40px;
       cursor: pointer;
       transition: all .2s ease-in-out;
@@ -85,11 +88,13 @@
 
     .control-progress {
       margin-left: 20px;
-      width: 50vw;
+      width: 100%;
     }
 
     .line-left {
       margin-left: 20px;
+      width: 100px;
+      flex-shrink: 0;
     }
   }
 }
