feat: 新增和浏览器控件交互MediaMetadata 同步状态

--- a/src/Components/Player/index.scss
+++ b/src/Components/Player/index.scss
@@ -75,7 +75,10 @@
       display: block;
       margin: auto;
       width: 30vw;
+      height: 30vw;
       max-width: 50vh;
+      max-height: 50vh;
+      object-fit: cover;
       border-radius: 20px;
       align-self: baseline;
     }
