--- a/src/Components/Lrc/index.scss
+++ b/src/Components/Lrc/index.scss
@@ -7,6 +7,7 @@
   transition: .5s;
   height: 100%;
   scroll-behavior: smooth;
+  transform: translateZ(0);
   -webkit-overflow-scrolling: touch;
   
   &::-webkit-scrollbar {
@@ -15,6 +16,7 @@
 
   .lrc-list {
     letter-spacing: 2px;
+    transform: translateZ(0);
     // 一屏幕展示 10 行，那么每行 10vh， 高 10v  font-size: 5vh  margin-top: 5vh
     p {
       font-size: 3vh;
@@ -39,6 +41,7 @@
     opacity: 1;
     font-weight: 600;
     font-size: 3.5vh;
+    transition: all 0.2s ease-in-out;
     // text-shadow: 0 0 1px white, 0 0 1px #00FFFF, 0 0 5px #7FFF00, 0 0 2px white;
   }
 }
