fix: 修改歌曲换行判断方式,兼容换行

--- a/src/Components/Lrc/index.scss
+++ b/src/Components/Lrc/index.scss
@@ -20,7 +20,7 @@
     // 一屏幕展示 10 行，那么每行 10vh， 高 10v  font-size: 5vh  margin-top: 5vh
     p {
       font-size: 3vh;
-      height: 5vh;
+      line-height: 5vh;
       margin-top: 2.5vh;
       margin-bottom: 0;
       transition: all 0.2s ease-in-out;
