--- a/src/Components/Lrc/index-word.scss
+++ b/src/Components/Lrc/index-word.scss
@@ -6,6 +6,7 @@
   transition: .5s;
   height: 100%;
   scroll-behavior: smooth;
+  transform: translate3d(0, 0, 0);
   
   &::-webkit-scrollbar {
     display: none;
