--- a/src/Components/Lrc/index.scss
+++ b/src/Components/Lrc/index.scss
@@ -7,8 +7,7 @@
   transition: .5s;
   height: 100%;
   scroll-behavior: smooth;
-  transform: translateZ(0);
-  -webkit-overflow-scrolling: touch;
+  transform: translate3d(0, 0, 0);
   
   &::-webkit-scrollbar {
     display: none;
