--- a/src/Components/AlbumList/index.scss
+++ b/src/Components/AlbumList/index.scss
@@ -1,24 +1,22 @@
 .album-list {
-  display: flex;
-  flex-wrap: wrap;
-  padding: 0 4%;
+  display: grid;
   justify-content: space-between;
+  grid-template-columns: repeat(auto-fill, 30%);
+  row-gap: 90px;
+  margin-top: 60px;
 }
 
 .album-item {
   position: relative;
-  width: 30%;
-  min-width: 400px;
   padding: 20px;
   height: auto;
   border-radius: 40px;
-  box-shadow: 5px 5px 30px 15px rgba(0,0,0,0.25), 
-      -5px -5px 30px 15px rgba(0,0,0,0.22);
+  box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 20px 4px;
   transition: 0.4s;
-  margin-bottom: 80px;
   aspect-ratio: 1 / 1;
   color: white;
   overflow: hidden;
+  background-size: cover;
 
   .mask {
     position: absolute;
