--- a/src/Components/Player/index.scss
+++ b/src/Components/Player/index.scss
@@ -8,6 +8,7 @@
   color: white;
   background-color: rgb(33, 32, 32);
   overflow: hidden;
+  transition: transform 0.5s ease-in-out; 
 
   p {
     margin-bottom: 0;
@@ -120,7 +121,7 @@
     z-index: 101;
     cursor: pointer;
     opacity: .5;
-    transition: opacity .4s ease-in-out;
+    transition: opacity .4s ease-out;
 
 
     &:hover {
@@ -179,4 +180,8 @@
       width: 100%;
     }
   }
+}
+
+.player-max-min {
+  transform: translate3d(0, 100vh, 0);
 }
